syntax = "proto3";

package v1;

option go_package = "github.com/AnhPhan49/exam-bank-system/apps/backend/pkg/proto/v1";

import "google/protobuf/timestamp.proto";

// User service
service UserService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GoogleLogin(GoogleLoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc GetStudentList(GetStudentListRequest) returns (GetStudentListResponse);
  rpc GetCurrentUser(GetCurrentUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

// User role enum
enum UserRole {
  ROLE_UNSPECIFIED = 0;
  ROLE_STUDENT = 1;
  ROLE_TEACHER = 2;
  ROLE_ADMIN = 3;
  ROLE_CONTRIBUTOR = 4;
  ROLE_MODERATOR = 5;
}

// User level enum
enum UserLevel {
  LEVEL_UNSPECIFIED = 0;
  LEVEL_ELEMENTARY = 1;
  LEVEL_MIDDLE = 2;
  LEVEL_HIGH = 3;
  LEVEL_UNIVERSITY = 4;
  LEVEL_POSTGRAD = 5;
}

// User status enum
enum UserStatus {
  STATUS_UNSPECIFIED = 0;
  STATUS_ACTIVE = 1;
  STATUS_INACTIVE = 2;
  STATUS_SUSPENDED = 3;
  STATUS_LOCKED = 4;
}

// Auth provider enum
enum AuthProvider {
  PROVIDER_UNSPECIFIED = 0;
  PROVIDER_EMAIL = 1;
  PROVIDER_GOOGLE = 2;
  PROVIDER_FACEBOOK = 3;
}

// User message
message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string avatar = 4;
  UserRole role = 5;
  UserLevel level = 6;
  UserStatus status = 7;
  AuthProvider provider = 8;
  bool email_verified = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  google.protobuf.Timestamp last_login = 12;
}

// Session message
message Session {
  string id = 1;
  string user_id = 2;
  string token = 3;
  string device_name = 4;
  string ip_address = 5;
  string user_agent = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp expires_at = 8;
  google.protobuf.Timestamp last_activity = 9;
}

// Login request
message LoginRequest {
  string email = 1;
  string password = 2;
  string device_name = 3;
}

// Login response
message LoginResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  Session session = 4;
}

// Google login request
message GoogleLoginRequest {
  string id_token = 1;
  string device_name = 2;
}

// Refresh token request
message RefreshTokenRequest {
  string refresh_token = 1;
}

// Refresh token response
message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// Verify email request
message VerifyEmailRequest {
  string token = 1;
}

// Verify email response
message VerifyEmailResponse {
  bool success = 1;
  string message = 2;
}

// Forgot password request
message ForgotPasswordRequest {
  string email = 1;
}

// Forgot password response
message ForgotPasswordResponse {
  bool success = 1;
  string message = 2;
}

// Reset password request
message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
}

// Reset password response
message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}

// Register request
message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  UserRole role = 4;
  UserLevel level = 5;
}

// Register response
message RegisterResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
}

// Get user request
message GetUserRequest {
  string user_id = 1;
}

// Get user response
message GetUserResponse {
  User user = 1;
}

// Get current user request
message GetCurrentUserRequest {}

// List users request
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  UserRole role = 3;
  UserLevel level = 4;
  UserStatus status = 5;
}

// List users response
message ListUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Get student list request
message GetStudentListRequest {
  int32 page = 1;
  int32 page_size = 2;
  UserLevel level = 3;
}

// Get student list response
message GetStudentListResponse {
  repeated User students = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Update user request
message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string avatar = 3;
  UserRole role = 4;
  UserLevel level = 5;
  UserStatus status = 6;
}

// Update user response
message UpdateUserResponse {
  User user = 1;
}